--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=103.86.176.8
 DB_PORT=3306
-DB_DATABASE=glow_line
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=lsgyfvyd_mobile_city
+DB_USERNAME=lsgyfvyd_root
+DB_PASSWORD=sparklabit@gmail.com
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
